# trmnl-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  config.toml  otel-collector-config.yaml
.sqlx/: query-0c70463542d34829d56c7fe5a60e86b74ab1fec45b18dfac6c8624fcd68769e4.json  query-1919b48583226f9bb83eec9fdfbcd4028364711067e907cf4d7ad4a7b49eb079.json  query-1baf822bb9aee690eae9ff750b7d7dc12ff03ecdb1e8c39a3a462d9d74759243.json  query-2171153ad6701f4468ee404aec55cc2c0597e3ee158b0c6937eecfcba2eb79a0.json  query-226ffab1f21cfe4c3c539be1a0d112de59a35631212179072df3c8e44f1e6737.json  query-27441f8aa358ea44966c100c1816cbd45701a92ac41d7e118ec963bbc532f793.json  query-3671a3e364af3720d7ef0c7f58aec86c29dfb1c4b0c65175527e28f1efbb4df6.json  query-42e052d781e184c08a71b3cb7dbca5fcf5c2739dd61548d733b0643146490aa9.json  query-42f5a6bfef46d9d57b6c0d0fb8a612a22d997fe70e40447f5a51a1bd7e23ffc2.json  query-5429e3c795060448db6c8cbf26e3f0fd899022d4d1375f4411af036f2d09dfa4.json  query-5f2efca06ad5d97e75ec27faca01007e25e9944d3c7fdb26554580f09482bb87.json  query-62fb2d90bb6aa836bab2eec44e0ac511fda0fde531d8af396d1fc482d50a5381.json  query-6bcb6857b3a4b16df46be2ab8277dc47f8a3937f41c8f51ddd6bbacd86a7caf1.json  query-7195b75f3c9992c71e1aa8f4662ded47d9d912cd9109267e7b298f994365b5da.json  query-88d84518c9e2e59ac81e5ff858a7283091d61a352545695fc9e08e0797f453e4.json  query-912007443e6a9f8d6b7cab0c9278c52dd9a06291cf80d80c2dcd66c29a9629c7.json  query-9a16a396a706f39fdda16aeeff9092d22f0b95bb960f56c12a0bf049d93ee1b1.json  query-a0586295a2e0aab7bd75f4c8a0d203045e1a9796e5b067744cb9d8653256b2a9.json  (+7 more)
(+40 files in other folders)
